--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,25 +17,27 @@ body {
 .container {
   display: flex;
   justify-content: center;
+  text-align: center;
   max-width: 100%;
   flex-wrap: wrap;
   z-index: 1;
-  margin-top: 50px;
 }
 
 .container .img-home-nama-kartu-background {
   position: absolute;
+  margin: 0;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   height: 100%;
-  top: 0;
 }
 
 .container .kartu-nama {
-  bottom: 15px;
+  top: 235px;
   right: 10px;
   position: relative;
-  width: 250px;
+  width: 200px;
   height: 200px;
-  margin-top: 200px;
   -webkit-box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 12px 8px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
@@ -49,7 +51,7 @@ body {
 }
 
 .container .kartu-nama .nama {
-  padding: 45px;
+  padding: 30px;
   text-align: center;
   transition: 0.5s;
 }
@@ -116,11 +118,26 @@ body {
 /* mobile */
 @media only screen and (max-width: 600px) {
   .container .img-home-nama-kartu-background {
-    position: absolute;
+    top: 290px;
     height: 80%;
-    top: 60px;
   }
+
   .container .kartu-nama {
-    top: 25px;
+    width: 200px;
+    height: 150px;
+    position: relative;
+    margin: 0;
+  }
+
+  .container .kartu-nama .nama {
+    padding: 10px;
+    text-align: center;
+    transition: 0.5s;
+  }
+
+  .container .kartu-nama .nama h5 {
+    font-size: 1.4rem;
+    color: #bf7864;
+    z-index: 1;
   }
 }
